통합검색 a링크 구조수정

--- a/portal/html/USR-2110-F-LIST.html
+++ b/portal/html/USR-2110-F-LIST.html
@@ -319,14 +319,14 @@
                                         <div class="tit">
                                             <strong>용어사전<span>(총 1건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">"벤처투자마트"</span></dt>
-                                            <dd>
-                                                <a href="">
-                                                    <span class="result_txt">"벤처투자마트"</span>는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해 기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.
-                                                </a>
-                                            </dd>
-                                        </dl>
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">"벤처투자마트"</span></dt>
+                                                <dd>
+                                                    <span class="result_txt">"벤처투자마트"</span>는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해 기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해 기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해 기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해 기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.
+                                                </dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
@@ -336,21 +336,34 @@
                                         <div class="tit">
                                             <strong>메뉴<span>(총 6건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">벤처투자마트</span>란?</dt>
-                                            <dd><a href="">투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>FAQ</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>제목</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>상세내용</a></dd>
-                                        </dl>
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">벤처투자마트</span>란?</dt>
+                                                <dd>투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>FAQ</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>제목</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>상세내용</dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
+                                    </div>
+
+                                    <div class="result_box">
+                                        <div class="tit">
+                                            <strong>데이터없을경우<span>(총 0건)</span></strong>
+                                        </div>
+                                        <div class="nodata">검색결과가 없습니다.</div>
                                     </div>
                                     
                                     <div class="board_btn">
@@ -380,18 +393,24 @@
                                         <div class="tit">
                                             <strong>메뉴<span>(총 6건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">벤처투자마트</span>란?</dt>
-                                            <dd><a href="">투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>FAQ</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>제목</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>상세내용</a></dd>
-                                        </dl>
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">벤처투자마트</span>란?</dt>
+                                                <dd>투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>FAQ</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>제목</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>상세내용</dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
@@ -424,18 +443,24 @@
                                         <div class="tit">
                                             <strong>메뉴<span>(총 6건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">벤처투자마트</span>란?</dt>
-                                            <dd><a href="">투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>FAQ</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>제목</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>상세내용</a></dd>
-                                        </dl>
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">벤처투자마트</span>란?</dt>
+                                                <dd>투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>FAQ</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>제목</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>상세내용</dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
@@ -468,18 +493,24 @@
                                         <div class="tit">
                                             <strong>메뉴<span>(총 6건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">벤처투자마트</span>란?</dt>
-                                            <dd><a href="">투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>FAQ</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>제목</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>상세내용</a></dd>
-                                        </dl>
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">벤처투자마트</span>란?</dt>
+                                                <dd>투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>FAQ</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>제목</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>상세내용</dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
@@ -512,18 +543,24 @@
                                         <div class="tit">
                                             <strong>메뉴<span>(총 6건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">벤처투자마트</span>란?</dt>
-                                            <dd><a href="">투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>FAQ</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>제목</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>상세내용</a></dd>
-                                        </dl>
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">벤처투자마트</span>란?</dt>
+                                                <dd>투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>FAQ</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>제목</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>상세내용</dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
@@ -556,18 +593,24 @@
                                         <div class="tit">
                                             <strong>메뉴<span>(총 6건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">벤처투자마트</span>란?</dt>
-                                            <dd><a href="">투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>FAQ</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</a></dd>
-                                        </dl>
-                                        <dl>
-                                            <dt>제목</dt>
-                                            <dd><a href=""><span class="result_txt">벤처투자마트</span>상세내용</a></dd>
-                                        </dl>
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">벤처투자마트</span>란?</dt>
+                                                <dd>투자 유치가 필요한 초기 창업기업·중소기업에게 투자자와의 상담을 제공하는 서비스입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>FAQ</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>와 관련된 자주묻는 질문입니다.</dd>
+                                            </dl>
+                                        </a>
+                                        <a href="">
+                                            <dl>
+                                                <dt>제목</dt>
+                                                <dd><span class="result_txt">벤처투자마트</span>상세내용</dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
@@ -600,14 +643,14 @@
                                         <div class="tit">
                                             <strong>콘텐츠<span>(총 1건)</span></strong>
                                         </div>
-                                        <dl>
-                                            <dt><span class="result_txt">"벤처투자마트"</span></dt>
-                                            <dd>
-                                                <a href="">
+                                        <a href="">
+                                            <dl>
+                                                <dt><span class="result_txt">"벤처투자마트"</span></dt>
+                                                <dd>
                                                     <span class="result_txt">"벤처투자마트"</span>는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해 기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.
-                                                </a>
-                                            </dd>
-                                        </dl>
+                                                </dd>
+                                            </dl>
+                                        </a>
                                         <div class="more">
                                             <a href="">메뉴 검색 결과 더보기 ></a>
                                         </div>
