--- a/pub_list.html
+++ b/pub_list.html
@@ -1139,7 +1139,7 @@
                     date:'2022-09-23',
                     mdate:'2022-11-28',
                     con:'완료',
-                    etc:''
+                    etc:'(11/23) a링크 구조수정'
                 },
 
                 // 사이트맵
