통계 화살표 모바일 추가

--- a/pub_list.html
+++ b/pub_list.html
@@ -527,7 +527,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'(11/21) 탭 삭제<br/>(11/22) 화살표 제거'
+                    etc:'(11/21) 탭 삭제<br/>(11/22) 화살표 제거 <br/>(11/24) 화살표 (모바일)추가'
                 },
                 {
                     division: '',
@@ -1258,87 +1258,78 @@
                     division: '',
                     depth1:'커뮤니티 자유게시판',
                     path:'../cms/index37.html',
-                    date:'',
+                    date:'2022-11-23',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 자유게시판 상세',
-                    path:'../cms/',
-                    date:'',
+                    path:'../cms/index37-1.html',
+                    date:'2022-11-23',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 일정',
                     path:'../cms/index38.html',
-                    date:'',
+                    date:'2022-11-23',
                     mdate:'',
-                    con:'작업중',
-                    etc:''
-                },
-                {
-                    division: '',
-                    depth1:'커뮤니티 일정 상세',
-                    path:'../cms/',
-                    date:'',
-                    mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 게시판',
                     path:'../cms/index39.html',
-                    date:'',
+                    date:'2022-11-23',
                     mdate:'',
-                    con:'작업중',
-                    etc:''
-                },
-                {
-                    division: '',
-                    depth1:'커뮤니티 게시판 상세',
-                    path:'../cms/',
-                    date:'',
-                    mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자 TALK 관리',
                     path:'../cms/index40.html',
-                    date:'',
+                    date:'2022-11-23',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 1차신청관리',
-                    path:'../cms/',
-                    date:'',
+                    path:'../cms/index41.html',
+                    date:'2022-11-23',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 1차신청관리 상세',
-                    path:'../cms/',
-                    date:'',
+                    path:'../cms/index42.html',
+                    date:'2022-11-23',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리',
-                    path:'../cms/',
+                    path:'../cms/index43.html',
+                    date:'2022-11-23',
+                    mdate:'',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청관리 상세',
+                    path:'../cms/index43-1.html',
                     date:'',
                     mdate:'',
                     con:'작업중',
@@ -1347,7 +1338,34 @@
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
-                    path:'../cms/',
+                    path:'../cms/index43-2.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청관리 상세',
+                    path:'../cms/index43-3.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청관리 상세',
+                    path:'../cms/index43-4.html',
+                    date:'',
+                    mdate:'',
+                    con:'작업중',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청관리 상세',
+                    path:'../cms/index43-5.html',
                     date:'',
                     mdate:'',
                     con:'작업중',
