--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -348,6 +348,8 @@
                             </li>
                         </ul>
                     </div>
+                    <button class="swiper-button-prev"></button>
+                    <button class="swiper-button-next"></button>
                     <span class="standard">(2021.12.31 기준)</span>
                 </div>
                 
@@ -367,6 +369,8 @@
                             </li>
                         </ul>
                     </div>
+                    <button class="swiper-button-prev"></button>
+                    <button class="swiper-button-next"></button>
                     <span class="standard">(2021.12.31 기준)</span>
                 </div>
                 
