--- a/pub_list.html
+++ b/pub_list.html
@@ -1330,99 +1330,90 @@
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
                     path:'../cms/index43-1.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
                     path:'../cms/index43-2.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
                     path:'../cms/index43-3.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
                     path:'../cms/index43-4.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 2차신청관리 상세',
                     path:'../cms/index43-5.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
+                    etc:''
+                },
+                {
+                    division: '',
+                    depth1:'벤처투자마트 2차신청관리 상세',
+                    path:'../cms/index43-6.html',
+                    date:'2022-11-24',
+                    mdate:'',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'구인구직 관리 - 채용공고 관리',
                     path:'../cms/index44.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
-                    etc:''
-                },
-                {
-                    division: '',
-                    depth1:'구인구직 관리 - 채용공고 상세',
-                    path:'../cms/index45.html',
-                    date:'',
-                    mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'구인구직 관리 - 채용공고 수정/상세',
-                    path:'../cms/index46.html',
-                    date:'',
+                    path:'../cms/index45.html',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'구인구직 관리 - 인력풀 관리',
                     path:'../cms/index47.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'구인구직 관리 - 인력풀 관리 수정/상세',
                     path:'../cms/index48.html',
-                    date:'',
+                    date:'2022-11-24',
                     mdate:'',
-                    con:'작업중',
-                    etc:''
-                },
-                {
-                    division: '',
-                    depth1:'벤처투자상담 목록',
-                    path:'../cms/index49.html',
-                    date:'',
-                    mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
             ];
