--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -535,16 +535,19 @@
                     </div>
                     <div class="btn_box_group">
                         <div class="btn_box">
-                            <a href="./USR-1221-F-DASH.html" class="btn_navy">업종별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_navy agn_c">업종별 투자실적<br/>더보기 ></a>
                         </div>
                         <div class="btn_box">
-                            <a href="./USR-1221-F-DASH.html" class="btn_blue">지역별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_blue agn_c">지역별 투자실적<br/>더보기 ></a>
                         </div>
                         <div class="btn_box">
-                            <a href="./USR-1221-F-DASH.html" class="btn_skyblue">업력별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_skyblue agn_c">업력별 투자실적<br/>더보기 ></a>
                         </div>
                         <div class="btn_box">
-                            <a href="./USR-1221-F-DASH.html" class="btn_mint">투자유형별 투자실적 더보기 >></a>
+                            <a href="./USR-1221-F-DASH.html" class="btn_mint agn_c">투자유형별 투자실적<br/>더보기 ></a>
+                        </div>
+                        <div class="btn_box">
+                            <a href="./USR-1221-F-DASH.html" class="btn_gray agn_c">전문투자자용 투자실적<br/>더보기 ></a>
                         </div>
                     </div>
                 </div>
