--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -425,20 +425,32 @@
 
                         <!-- 두번째 탭 -->
                         <div class="tab_content_02">
+                            <div class="inp_group mb20">
+                                <div class="sel_box">
+                                    <select>
+                                        <option value="">년도선택</option>
+                                        <option value="">2017년</option>
+                                        <option value="">2018년</option>
+                                        <option value="">2019년</option>
+                                        <option value="">2020년</option>
+                                        <option value="">2021년</option>
+                                    </select>
+                                </div>
+                                <div class="sel_box">
+                                    <select>
+                                        <option value="">년도선택</option>
+                                        <option value="">2017년</option>
+                                        <option value="">2018년</option>
+                                        <option value="">2019년</option>
+                                        <option value="">2020년</option>
+                                        <option value="">2021년</option>
+                                    </select>
+                                </div>
+                            </div>
                             <div class="investment_performance_box">
 
                                 <!-- 차트 -->
                                 <div class="left">
-                                    <!-- <div class="sel_box">
-                                        <select>
-                                            <option value="">년도선택</option>
-                                            <option value="">2017년</option>
-                                            <option value="">2018년</option>
-                                            <option value="">2019년</option>
-                                            <option value="">2020년</option>
-                                            <option value="">2021년</option>
-                                        </select>
-                                    </div> -->
                                     <div class="chart">
                                         <!--  -->
                                     </div>
