--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -298,6 +298,21 @@
 
                         <!-- 첫번째 탭 -->
                         <div class="on tab_content_01">
+
+                            <!-- 버튼 -->
+                            <div class="inp_group mb20">
+                                <div class="disclosure_box">
+                                    <div class="btn_list type_02">
+                                        <button>
+                                            <strong>벤처투자조합</strong>
+                                        </button>
+                                        <button>
+                                            <strong>개인투자조합</strong>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="investment_performance_box">
 
                                 <!-- 차트 -->
@@ -425,28 +440,27 @@
 
                         <!-- 두번째 탭 -->
                         <div class="tab_content_02">
+
+                            <!-- 버튼 -->
                             <div class="inp_group mb20">
-                                <div class="sel_box">
-                                    <select>
-                                        <option value="">년도선택</option>
-                                        <option value="">2017년</option>
-                                        <option value="">2018년</option>
-                                        <option value="">2019년</option>
-                                        <option value="">2020년</option>
-                                        <option value="">2021년</option>
-                                    </select>
-                                </div>
-                                <div class="sel_box">
-                                    <select>
-                                        <option value="">년도선택</option>
-                                        <option value="">2017년</option>
-                                        <option value="">2018년</option>
-                                        <option value="">2019년</option>
-                                        <option value="">2020년</option>
-                                        <option value="">2021년</option>
-                                    </select>
+                                <div class="disclosure_box">
+                                    <div class="btn_list type_02">
+                                        <button>
+                                            <strong>2021년</strong>
+                                        </button>
+                                        <button>
+                                            <strong>2021년</strong>
+                                        </button>
+                                        <button>
+                                            <strong>2021년</strong>
+                                        </button>
+                                        <button>
+                                            <strong>2021년</strong>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
+
                             <div class="investment_performance_box">
 
                                 <!-- 차트 -->
