--- a/pub_list.html
+++ b/pub_list.html
@@ -536,7 +536,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:''
+                    etc:'(11/25) 업종별/지역별에 버튼 추가'
                 },
                 {
                     division: '',
