업무처리지원 화면 수정

--- a/portal/html/USR-1251-F-DTL.html
+++ b/portal/html/USR-1251-F-DTL.html
@@ -303,13 +303,15 @@
                         <table>
                             <caption>VC 근무경력 확인</caption>
                             <colgroup>
+                                <col width="8%">
+                                <col width="47%">
+                                <col width="10%">
                                 <col width="25%">
-                                <col width="25%">
-                                <col width="25%">
-                                <col width="25%">
+                                <col width="10%">
                             </colgroup>
                             <thead>
                                 <tr>
+                                    <th scope="col">번호</th>
                                     <th scope="col">VC 명</th>
                                     <th scope="col">직급</th>
                                     <th scope="col">근무기간</th>
@@ -318,24 +320,28 @@
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>4</td>
                                     <td>ㅇㅇ인베스먼트</td>
                                     <td>팀장</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
                                     <td>3개월</td>
                                 </tr>
                                 <tr>
+                                    <td>3</td>
                                     <td>ㅇㅇ인베스먼트</td>
                                     <td>팀장</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
                                     <td>3개월</td>
                                 </tr>
                                 <tr>
+                                    <td>2</td>
                                     <td>ㅇㅇ인베스먼트</td>
                                     <td>팀장</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
                                     <td>3개월</td>
                                 </tr>
                                 <tr>
+                                    <td>1</td>
                                     <td>ㅇㅇ인베스먼트</td>
                                     <td>팀장</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
@@ -344,10 +350,7 @@
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td>총 경력기간 3년 4개월</td>
+                                    <td colspan="5" class="agn_r pr20">총 경력기간 3년 4개월</td>
                                 </tr>
                             </tfoot>
                         </table>
