--- a/portal/html/USR-1252-F-LIST.html
+++ b/portal/html/USR-1252-F-LIST.html
@@ -290,79 +290,143 @@
                     <table>
                         <caption>신청내역 확인</caption>
                         <colgroup>
-                            <col width="7%">
-                            <col width="25%">
+                            <col width="8%">
+                            <col width="18%">
+                            <col width="18%">
                             <col width="28%">
-                            <col width="25%">
+                            <col width="18%">
+                            <col width="10%">
                         </colgroup>
                         <thead>
                             <tr>
-                                <th scope="col">No</th>
-                                <th scope="col">신청이력 구분</th>
+                                <th scope="col">번호</th>
+                                <th scope="col">신청일자</th>
+                                <th scope="col">구분</th>
                                 <th scope="col">문서명</th>
-                                <th scope="col">확인일시</th>
+                                <th scope="col">승인일자</th>
+                                <th scope="col">비고</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>10</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_blue">출력</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>9</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_gray">출력완료</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>8</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_gray">출력완료</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>7</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_gray">출력완료</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>6</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_gray">출력완료</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>5</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_blue">출력</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>4</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_blue">출력</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>3</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_blue">출력</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>2</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_blue">출력</button>
+                                    </div>
+                                </td>
                             </tr>
                             <tr>
                                 <td>1</td>
+                                <td>2022-10-22</td>
                                 <td>VC 근무경력 확인</td>
                                 <td>제20200524-002호</td>
                                 <td>2022-10-22</td>
+                                <td>
+                                    <div class="btn_box">
+                                        <button class="btn_blue">출력</button>
+                                    </div>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
