--- a/pub_list.html
+++ b/pub_list.html
@@ -663,7 +663,7 @@
                     date:'2022-09-15',
                     mdate:'2022-11-09',
                     con:'완료',
-                    etc:''
+                    etc:'(11/28) 팝업 수정'
                 },
                 {
                     division: '',
@@ -672,7 +672,7 @@
                     date:'2022-09-15',
                     mdate:'2022-10-18',
                     con:'완료',
-                    etc:''
+                    etc:'(11/28) 테이블 내용(컬럼) 수정'
                 },
                 {
                     division: '',
@@ -681,7 +681,7 @@
                     date:'2022-09-15',
                     mdate:'2022-10-24',
                     con:'완료',
-                    etc:''
+                    etc:'(11/28) 테이블 내용(컬럼) 수정'
                 },
                 {
                     division: '',
@@ -690,7 +690,7 @@
                     date:'2022-09-15',
                     mdate:'2022-10-31',
                     con:'완료',
-                    etc:''
+                    etc:'(11/28) 테이블 내용(컬럼) 수정'
                 },
 
                 // 벤처투자포털
