--- a/portal/html/USR-12511-H-CONTN.html
+++ b/portal/html/USR-12511-H-CONTN.html
@@ -306,7 +306,7 @@
                 
                     <div class="btn_box_group type_01 left">
                         <div class="btn_box">
-                            <a href="" class="btn_navy dialog-link" data-target="#alpop_01">VC 근무경력 확인하기 >></a>
+                            <a href="" class="btn_navy dialog-link" data-target="#note_01">VC 근무경력 확인하기 >></a>
                         </div>
                         <div class="btn_box">
                             <a href="" class="btn_blue dialog-link" data-target="#alpop_02">VC Track Record 확인하기 >></a>
@@ -372,7 +372,12 @@
     </div>
 
     <div class="pop_content">
-        로그인한 사용자만 이용가능합니다.
+        중복된 회원이 존재합니다.<br/>
+        관리자에게 문의해주시기 바랍니다.<br/>
+        문의처 : 02-0000-0000<br/><br/><br/>
+        일치하는 회원 정보가 존재하지 않습니다.<br/>
+        관리자에게 문의해주시기 바랍니다.<br/>
+        문의처 : 02-0000-0000<br/>
     </div>
 
     <div class="pop_footer">
@@ -417,6 +422,70 @@
     <div class="pop_footer">
         <div class="btn_box">
             <button class="btn_mint pop_close">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- VC 근무경력 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>VC 경력 확인 정보 입력</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>VC 경력 확인 정보 입력</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="input_01">성명</label></th>
+                    <td>
+                        <div class="inp_box">
+                            <input type="text" id="input_01" placeholder="성명을 입력하세요.">
+                        </div>
+                    </td>
+                    <th scope="row"><label for="radio_02">생년월일</label></th>
+                    <td>
+                        <div class="inp_box">
+                            <input type="text" id="input_02" placeholder="생년월일 8자리를 입력하세요.">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_01">성별</label></th>
+                    <td>
+                        <div class="sel_box">
+                            <select>
+                                <option value="">선택</option>
+                                <option value="">여자</option>
+                                <option value="">남자</option>
+                            </select>
+                        </div>
+                    </td>
+                    <th scope="row"><label for="radio_03">투자사명</label></th>
+                    <td>
+                        <div class="inp_box">
+                            <input type="text" id="input_03" placeholder="투자사명을 입력하세요.">
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow dialog-link" data-target="#alpop_01">확인</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
         </div>
     </div>
 
