--- a/portal/html/USR-12512-F-DTL.html
+++ b/portal/html/USR-12512-F-DTL.html
@@ -303,30 +303,33 @@
                         <table>
                             <caption>VC Track Record 확인</caption>
                             <colgroup>
+                                <col width="8%">
                                 <col width="15%">
                                 <col width="20%">
                                 <col width="20%">
-                                <col width="15%">
-                                <col width="10%">
-                                <col width="10%">
-                                <col width="10%">
+                                <col width="13%">
+                                <col width="8%">
+                                <col width="8%">
+                                <col width="8%">
                             </colgroup>
                             <thead>
                                 <tr>
-                                    <th scope="col" rowspan="2">구분</th>
+                                    <th scope="col" rowspan="2">번호</th>
+                                    <th scope="col" rowspan="2">VC명</th>
                                     <th scope="col" rowspan="2">조합명</th>
                                     <th scope="col" rowspan="2">담당기간</th>
                                     <th scope="col" rowspan="2">투자기업명</th>
                                     <th scope="col" colspan="3" class="bdcolor">기여도</th>
                                 </tr>
                                 <tr>
-                                    <th scope="col">발급</th>
+                                    <th scope="col">발굴</th>
                                     <th scope="col">심사</th>
                                     <th scope="col">사후</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>4</td>
                                     <td rowspan="2">ㅇㅇ인베스먼트</td>
                                     <td>ㅇㅇ벤처투자조합</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
@@ -336,6 +339,7 @@
                                     <td>1%</td>
                                 </tr>
                                 <tr>
+                                    <td>3</td>
                                     <td>ㅇㅇ벤처투자조합</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
                                     <td>아사달</td>
@@ -344,6 +348,7 @@
                                     <td>1%</td>
                                 </tr>
                                 <tr>
+                                    <td>2</td>
                                     <td>ㅇㅇ인베스먼트</td>
                                     <td>ㅇㅇ벤처투자조합</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
@@ -353,6 +358,7 @@
                                     <td>1%</td>
                                 </tr>
                                 <tr>
+                                    <td>1</td>
                                     <td>ㅇㅇ인베스먼트</td>
                                     <td>ㅇㅇ벤처투자조합</td>
                                     <td>2022-10-22 ~ 2022-10-22</td>
